tests/suite/fail/regression/reg_move_23.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r23"
    take(s)
    print(s) //~ ERROR was moved
}
